package pl.cx.p001.model;

/**
 * Represents the type of asset (resource) that can exist in a cell on the Arena.
 * Example types: MATTER, ENERGY.
 */
public enum AssetType {
    MATTER,
    ENERGY;
    // Add more asset types as needed
}
